Toggles on faq are working, but css is not. Working on fixing css styling problems.

--- a/src/styles/faq.css
+++ b/src/styles/faq.css
@@ -1,1 +1,67 @@
 @import "tailwindcss";
+
+.faqs {
+    width: 100%;
+    max-width: 750px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.faqs .faq {
+    margin: 15px;
+    padding: 15px;
+    background-color:white;
+    color: black;
+    border-radius: 10px;
+    box-shadow: 5px 7px rgba(0, 0, 0, 0.1);
+}
+
+.faqs .faq .faq-question{
+    position: relative;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI';
+    font-weight: 500;
+    font-size: 25px;
+    padding-right: 80px;
+
+    transition: all 0.4s ease;
+}
+
+.faqs .faq .faq-question::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    right: 0px;
+    transform: translateY(-50%);
+    width: 30px;
+    height: 30px;
+
+    background-image: url('public/asset.png');
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+
+    transition: all 0.4s ease-out;
+}
+
+.faqs .faq .faq-answer{
+    font-family: sans-serif, 'Gill Sans MT', Calibri, 'Trebuchet MS';
+    font-size: 14px;
+    color: gray;
+    opacity: 0;
+    max-height: 0;
+    overflow-y: hidden;
+    transition: all 0.4s ease-out;
+}
+
+.faqs .faq.open .faq-question {
+    margin-bottom: 15px;
+}
+
+.faqs .faq.open .faq-question::after{
+    transform: translateY(50%) rotate(180deg);
+}
+
+.faqs .faq.open .faq-answer {
+	max-height: 1000px;
+	opacity: 1;
+}
