--- a/src/styles/faq.css
+++ b/src/styles/faq.css
@@ -10,7 +10,7 @@
 .faqs .faq {
     margin: 15px;
     padding: 15px;
-    background-color:white;
+    background-color:#fff;
     color: black;
     border-radius: 10px;
     box-shadow: 5px 7px rgba(0, 0, 0, 0.1);
@@ -50,7 +50,7 @@
     opacity: 0;
     max-height: 0;
     overflow-y: hidden;
-    transition: all 0.4s ease-out;
+    transition: all 0.2s ease-out;
 }
 
 .faqs .faq.open .faq-question {
@@ -58,7 +58,7 @@
 }
 
 .faqs .faq.open .faq-question::after{
-    transform: translateY(50%) rotate(180deg);
+    transform: translateY(-50%) rotate(180deg);
 }
 
 .faqs .faq.open .faq-answer {
