--- a/src/styles/logistics.css
+++ b/src/styles/logistics.css
@@ -3,8 +3,6 @@ h3 {
     text-align: center;
     color: rgb(66, 66, 66);
     font-weight: 500;
-    display: inline-block;
-    position: relative;
 }
 
 .itemcont {
@@ -14,11 +12,19 @@ h3 {
 
 .logitem {
     flex: 1;
+    transition: all .2s ease-in-out; 
+}
+
+.logitem:hover {
+    transform: scale(1.1);
+}
+
+.logitem > h3 {
     display: inline-block;
     position: relative;
 }
 
-.logitem::after + h3{
+.logitem> h3::after {
     content: '';
     position: absolute;
     width: 100%;
@@ -26,12 +32,35 @@ h3 {
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: #0087ca;
+    background-color: #ca8700;
     transform-origin: bottom right;
     transition: transform 0.25s ease-out;
 }
 
-.logitem:hover::after + h3{
+.logitem > h3:hover::after {
     transform: scaleX(1);
     transform-origin: bottom left;
+}
+
+p {
+    text-align: center;
+}
+
+.track {
+    flex: 1;
+    transition: all 1s ease-in-out;
+}
+
+.track > h6 {
+    display: none;
+    transition: all 1s ease-in-out;
+}
+
+.track:hover {
+    transition: all 1s ease-in-out;
+}
+
+.track:hover > h6 {
+    display: inline;
+    max-width: 30px;
 }
