--- a/src/styles/logistics.css
+++ b/src/styles/logistics.css
@@ -46,21 +46,57 @@ p {
     text-align: center;
 }
 
-.track {
+
+
+@keyframes expand {
+            0% {
+                height: 120px;
+            }
+
+            100% {
+                height: 250px;
+            }
+        }
+
+@keyframes reverseexpand {
+            0% {
+                height: 250px;
+            }
+
+            100% {
+                height: 120px;
+            }
+        }
+
+
+
+.trackd {
     flex: 1;
-    transition: all 1s ease-in-out;
+    animation-duration: 0.3s;
+    animation-fill-mode: forwards;
 }
 
-.track > h6 {
-    display: none;
-    transition: all 1s ease-in-out;
+.trackd > h6 {
+    margin-top: 20px;
+    visibility: hidden;
 }
 
-.track:hover {
-    transition: all 1s ease-in-out;
+.trackd:hover {
+    animation-name: expand;
+    animation-timing-function: ease;
 }
 
-.track:hover > h6 {
-    display: inline;
-    max-width: 30px;
+.trackd:not(:hover) {
+    animation-name: reverseexpand;
+    animation-timing-function: ease;
+}
+
+.trackd:hover > h6 {
+    visibility: visible;
+}
+
+.trackcont {
+    text-align: center;
+    color: rgb(84, 84, 84);
+    height: 280px;
 }
